rbx_binary/src/tests/snapshots/rbx_binary__tests__util__default-inserted-folder__decoded.snap
---
source: rbx_binary/src/tests/util.rs
expression: decoded_viewed

---
- referent: referent-0
  name: Folder
  class: Folder
  properties:
    AttributesSerialize:
      BinaryString: ""
    Tags:
      BinaryString: ""
  children: []

